// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`viewUserRoute > renders no roles messages when roles are missing 1`] = `
"
  <nav class="govuk-breadcrumbs" aria-label="Breadcrumb">
  <ol class="govuk-breadcrumbs__list">
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/admin">User management</a>
    </li>
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/admin/user-management">Users</a>
    </li>
    <li class="govuk-breadcrumbs__list-item" aria-current="page">No Roles User</li>
  </ol>
</nav>


    



  <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
      <h1 class="govuk-heading-l">No Roles User details</h1>

      <dl class="govuk-summary-list">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Email
    </dt>
    <dd class="govuk-summary-list__value">
      noroles@example.com
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Last login
    </dt>
    <dd class="govuk-summary-list__value">
      
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Identity provider (IDP) roles
    </dt>
    <dd class="govuk-summary-list__value">
      No IDP roles have been allocated to this user
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Manage grants roles
    </dt>
    <dd class="govuk-summary-list__value">
      No Manage grants roles have been allocated to this user
    </dd>
  </div>
</dl>

        <div class="govuk-button-group govuk-!-margin-top-8">
          <a href="/admin/user-management/user-123/roles" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
  Update roles
</a>
        </div>
    </div>
  </div>
        "
`;

exports[`viewUserRoute > renders user details page 1`] = `
"
  <nav class="govuk-breadcrumbs" aria-label="Breadcrumb">
  <ol class="govuk-breadcrumbs__list">
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/admin">User management</a>
    </li>
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/admin/user-management">Users</a>
    </li>
    <li class="govuk-breadcrumbs__list-item" aria-current="page">Martin Smith</li>
  </ol>
</nav>


    



  <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
      <h1 class="govuk-heading-l">Martin Smith details</h1>

      <dl class="govuk-summary-list">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Email
    </dt>
    <dd class="govuk-summary-list__value">
      martin@ee.com
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Last login
    </dt>
    <dd class="govuk-summary-list__value">
      14 December 2025 20:03
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Identity provider (IDP) roles
    </dt>
    <dd class="govuk-summary-list__value">
      FCP.Casework.Read
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Manage grants roles
    </dt>
    <dd class="govuk-summary-list__value">
      ROLE_RPA_CASES_APPROVE,<br>ROLE_RPA_CASES_CREATE
    </dd>
  </div>
</dl>

        <div class="govuk-button-group govuk-!-margin-top-8">
          <a href="/admin/user-management/user-123/roles" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
  Update roles
</a>
        </div>
    </div>
  </div>
        "
`;
